--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Indians of North America -- Mississippi River Valley -- Folklore'
 - !lcsh 'Legends -- Great Lakes Region (North America)'
 - !lcsh 'Indians of North America -- Great Lakes Region (North America) -- Folklore'
+- GITenberg
 title: Myths and Legends of the Mississippi Valley and the Great Lakes
 url: http://www.gutenberg.org/ebooks/44935
